Added logo to index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <body>
     <div>
       <h1>Barbie</h1>
+      <img src="src/Barbie-The-Movie-Logo.png" alt="" />
     </div>
     <div class="container">
       <div class="row">
