Started over - removed old index.html content, fixed header width and height, new fonts, added Artist.html, more images, fixed spacing on homepage

--- a/index.html
+++ b/index.html
@@ -14,44 +14,31 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300;400;500&family=Satisfy&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <h1>Barbie</h1>
-      <img src="src/Barbie-The-Movie-Logo.png" alt="" />
+    <div class="hero">
+      <img src="src/Barbie-The-Movie-Logo.png" alt="Pink Barbie Movie Logo" />
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-4">
-          <div class="d-flex justify-content-evenly transparent">
-            <img
-              src="src/margot.jpg"
-              alt="Margot Robbie as Barbie"
-              class="cast-photos"
-            />
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="d-flex justify-content-evenly transparent">
-            <img
-              src="src/margot.jpg"
-              alt="Margot Robbie as Barbie"
-              class="cast-photos"
-            />
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="d-flex justify-content-evenly transparent">
-            <img
-              src="src/margot.jpg"
-              alt="Margot Robbie as Barbie"
-              class="cast-photos"
-            />
-          </div>
-        </div>
+      <h2 class="section-headings">Sounds of the Summer</h2>
+    </div>
+    <div class="container">
+      <div class="d-flex justify-content-evenly">
+        <div class="transparent text-center"></div>
+
+        <div class="transparent text-center"></div>
       </div>
+    </div>
+    <div class="footer text-center">
+      <p>This page was Coded by Jessica Dubrey. Insert link to Github</p>
     </div>
   </body>
 </html>
