--- a/index.html
+++ b/index.html
@@ -24,21 +24,35 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="hero">
-      <img src="src/Barbie-The-Movie-Logo.png" alt="Pink Barbie Movie Logo" />
+    <div class="navigation">
+      <img
+        src="src/Barbie-The-Movie-Logo.png"
+        alt="Pink Barbie Movie Logo"
+        class="logo-img"
+      />
     </div>
-    <div class="container">
-      <h2 class="section-headings">Sounds of the Summer</h2>
-    </div>
-    <div class="container">
+    <div class="container hero">
       <div class="d-flex justify-content-evenly">
-        <div class="transparent text-center"></div>
-
-        <div class="transparent text-center"></div>
+        <div class="content-info text-center">
+          <h1>Sounds of the Summer</h1>
+          <p>
+            Come and check out some of this Summer's biggest hits and best songs
+            from the bestselling soundtrack from Barbie: The Movie.
+          </p>
+        </div>
+        <div class="transparent"></div>
       </div>
     </div>
-    <div class="footer text-center">
-      <p>This page was Coded by Jessica Dubrey. Insert link to Github</p>
+    <div class="container album-stats">
+      <div class="row">
+        <div class="col-3"></div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <p class="footer-text">
+        This page was Coded by Jessica Dubrey. Insert link to Github
+      </p>
     </div>
   </body>
 </html>
