Added content section, button to artist page

--- a/index.html
+++ b/index.html
@@ -36,16 +36,28 @@
         <div class="content-info text-center">
           <h1>Sounds of the Summer</h1>
           <p>
-            Come and check out some of this Summer's biggest hits and best songs
-            from the bestselling soundtrack from Barbie: The Movie.
+            Check out some of this Summer's biggest hits and best songs from
+            Barbie: The Movie.
           </p>
+          <a href="#" class="btn artist-link">Tune In</a>
         </div>
         <div class="transparent"></div>
       </div>
     </div>
-    <div class="container album-stats">
+    <div class="container">
       <div class="row">
-        <div class="col-3"></div>
+        <div class="col album-stats">
+          <h3>Album Release Date</h3>
+          <p>July 21, 2023</p>
+        </div>
+        <div class="col album-stats">
+          <h3>Number of Songs</h3>
+          <p>17</p>
+        </div>
+        <div class="col album-stats">
+          <h3>Album Release Date</h3>
+          <p>44 Minutes 15 Seconds</p>
+        </div>
       </div>
     </div>
 
