Added picture to index.html, deleted images from src folder

--- a/index.html
+++ b/index.html
@@ -39,9 +39,17 @@
             Check out some of this Summer's biggest hits and best songs from
             Barbie: The Movie.
           </p>
-          <a href="#" class="btn artist-link">Tune In</a>
+          <a href="artist.html" class="btn artist-link">Tune In</a>
         </div>
-        <div class="transparent"></div>
+        <div
+          class="transparent d-flex justify-content-center align-items-center"
+        >
+          <img
+            src="src/margot.jpg"
+            alt="Actress Margot Robbie, as Barbie, waving"
+            class="transparent-image"
+          />
+        </div>
       </div>
     </div>
     <div class="container">
