Updated color scheme, added artist pictures, updated artist.html layout

--- a/artist.html
+++ b/artist.html
@@ -3,7 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300;400;500&family=Satisfy&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container hero">
+      <div class="d-flex justify-content-evenly">
+        <div class="content-info text-center">
+          <h1>Sounds of the Summer</h1>
+          <p>
+            Check out some of this Summer's biggest hits and best songs from
+            Barbie: The Movie.
+          </p>
+          <a href="artist.html" class="btn artist-link">Tune In</a>
+        </div>
+        <div
+          class="transparent d-flex justify-content-center align-items-center"
+        >
+          <img
+            src="src/margot.jpg"
+            alt="Actress Margot Robbie, as Barbie, waving"
+            class="transparent-image"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col album-stats">
+          <h3>Album Release Date</h3>
+          <p>July 21, 2023</p>
+        </div>
+        <div class="col album-stats">
+          <h3>Number of Songs</h3>
+          <p>17</p>
+        </div>
+        <div class="col album-stats">
+          <h3>Album Release Date</h3>
+          <p>44 Minutes 15 Seconds</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
