--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             Check out some of this Summer's biggest hits and best songs from
             Barbie: The Movie.
           </p>
-          <a href="artist.html" class="btn artist-link">Tune In</a>
+          <a href="#music" class="btn artist-link">Tune In</a>
         </div>
         <div
           class="transparent d-flex justify-content-center align-items-center"
@@ -63,12 +63,88 @@
           <p>17</p>
         </div>
         <div class="col album-stats">
-          <h3>Album Release Date</h3>
+          <h3>Runtime</h3>
           <p>44 Minutes 15 Seconds</p>
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col artist-stats">
+          <h3>Pink</h3>
+          <p>Lizzo</p>
+        </div>
+        <div class="col artist-stats">
+          <h3>Dance the Night Away</h3>
+          <p>Dua Lipa</p>
+        </div>
+        <div class="col artist-stats">
+          <h3>What Was I Made For</h3>
+          <p>Billie Eilish</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row playlist" id="music">
+        <div class="col-6">
+          <iframe
+            style="border-radius: 12px"
+            src="https://open.spotify.com/embed/track/11C4y2Yz1XbHmaQwO06s9f?utm_source=generator"
+            width="100%"
+            height="152"
+            frameborder="0"
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+            loading="lazy"
+          ></iframe>
+        </div>
+        <div class="col-6 artist-stats">
+          <h3>Dance the Night Away</h3>
+          <p>Dua Lipa</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <iframe
+            style="border-radius: 12px"
+            src="https://open.spotify.com/embed/track/2YXGbxICUdOUJe9OPlicy1?utm_source=generator"
+            width="100%"
+            height="152"
+            frameborder="0"
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+            loading="lazy"
+          ></iframe>
+        </div>
+        <div class="col-6 artist-stats">
+          <h3>Dance the Night Away</h3>
+          <p>Dua Lipa</p>
+        </div>
+      </div>
+    </div>
 
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <iframe
+            style="border-radius: 12px"
+            src="https://open.spotify.com/embed/track/2YXGbxICUdOUJe9OPlicy1?utm_source=generator"
+            width="100%"
+            height="152"
+            frameborder="0"
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+            loading="lazy"
+          ></iframe>
+        </div>
+        <div class="col-6 artist-stats">
+          <h3>Dance the Night Away</h3>
+          <p>Dua Lipa</p>
+        </div>
+      </div>
+    </div>
     <div class="footer">
       <p class="footer-text">
         This page was Coded by Jessica Dubrey. Insert link to Github
