Added photos changed layout

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           class="transparent d-flex justify-content-center align-items-center"
         >
           <img
-            src="src/margot.jpg"
+            src="src/Soundtrack.jpg"
             alt="Actress Margot Robbie, as Barbie, waving"
             class="transparent-image"
           />
@@ -69,24 +69,8 @@
       </div>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col artist-stats">
-          <h3>Pink</h3>
-          <p>Lizzo</p>
-        </div>
-        <div class="col artist-stats">
-          <h3>Dance the Night Away</h3>
-          <p>Dua Lipa</p>
-        </div>
-        <div class="col artist-stats">
-          <h3>What Was I Made For</h3>
-          <p>Billie Eilish</p>
-        </div>
-      </div>
-    </div>
-    <div class="container">
       <div class="row playlist" id="music">
-        <div class="col-6">
+        <div class="col">
           <iframe
             style="border-radius: 12px"
             src="https://open.spotify.com/embed/track/11C4y2Yz1XbHmaQwO06s9f?utm_source=generator"
@@ -98,53 +82,12 @@
             loading="lazy"
           ></iframe>
         </div>
-        <div class="col-6 artist-stats">
-          <h3>Dance the Night Away</h3>
-          <p>Dua Lipa</p>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-6">
-          <iframe
-            style="border-radius: 12px"
-            src="https://open.spotify.com/embed/track/2YXGbxICUdOUJe9OPlicy1?utm_source=generator"
-            width="100%"
-            height="152"
-            frameborder="0"
-            allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-            loading="lazy"
-          ></iframe>
-        </div>
-        <div class="col-6 artist-stats">
-          <h3>Dance the Night Away</h3>
-          <p>Dua Lipa</p>
+        <div class="col">
+          <img src="src/Dua-Lipa.jpg" alt="" class="artist-photo" />
         </div>
       </div>
     </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-6">
-          <iframe
-            style="border-radius: 12px"
-            src="https://open.spotify.com/embed/track/2YXGbxICUdOUJe9OPlicy1?utm_source=generator"
-            width="100%"
-            height="152"
-            frameborder="0"
-            allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-            loading="lazy"
-          ></iframe>
-        </div>
-        <div class="col-6 artist-stats">
-          <h3>Dance the Night Away</h3>
-          <p>Dua Lipa</p>
-        </div>
-      </div>
-    </div>
     <div class="footer">
       <p class="footer-text">
         This page was Coded by Jessica Dubrey. Insert link to Github
