--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300;400;500&family=Satisfy&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&family=Satisfy&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
@@ -34,10 +34,10 @@
     <div class="container hero">
       <div class="d-flex justify-content-evenly">
         <div class="content-info text-center">
-          <h1>Sounds of the Summer</h1>
+          <h1>Sounds of the Summer!</h1>
           <p>
             Check out some of this Summer's biggest hits and best songs from
-            Barbie: The Movie.
+            Barbie. 🎵
           </p>
           <a href="#music" class="btn artist-link">Tune In</a>
         </div>
@@ -55,22 +55,25 @@
     <div class="container">
       <div class="row">
         <div class="col album-stats">
-          <h3>Album Release Date</h3>
-          <p>July 21, 2023</p>
+          <h3>17 Songs</h3>
         </div>
         <div class="col album-stats">
-          <h3>Number of Songs</h3>
-          <p>17</p>
+          <h3>
+            Listen to the full album
+            <a
+              href="https://open.spotify.com/album/0BaIaHcyBXuOWeM4Aas4EW?si=ZkFPAEKaReagftQeAsns4w"
+              >here</a
+            >
+          </h3>
         </div>
         <div class="col album-stats">
-          <h3>Runtime</h3>
-          <p>44 Minutes 15 Seconds</p>
+          <h3>21 Artists</h3>
         </div>
       </div>
     </div>
     <div class="container">
       <div class="row playlist" id="music">
-        <div class="col">
+        <div class="col song">
           <iframe
             style="border-radius: 12px"
             src="https://open.spotify.com/embed/track/11C4y2Yz1XbHmaQwO06s9f?utm_source=generator"
@@ -88,10 +91,33 @@
       </div>
     </div>
 
-    <div class="footer">
-      <p class="footer-text">
-        This page was Coded by Jessica Dubrey. Insert link to Github
-      </p>
+    <div class="container">
+      <div class="row playlist">
+        <div class="col song">
+          <iframe
+            style="border-radius: 12px"
+            src="https://open.spotify.com/embed/track/2YXGbxICUdOUJe9OPlicy1?utm_source=generator"
+            width="100%"
+            height="152"
+            frameborder="0"
+            allowfullscreen=""
+            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+            loading="lazy"
+          ></iframe>
+        </div>
+        <div class="col">
+          <img src="src/Lizzo.jpg" alt="" class="artist-photo" />
+        </div>
+      </div>
     </div>
+    <div class="container footer">
+      <div class="row">
+        <p class="col">
+          This page was Coded by Jessica Dubrey. Insert link to Github
+        </p>
+      </div>
+    </div>
+
+    <div class="git-link"><p>This page was coded by Jessica Dubrey.</p></div>
   </body>
 </html>
