Added link to Github

--- a/index.html
+++ b/index.html
@@ -110,14 +110,10 @@
         </div>
       </div>
     </div>
-    <div class="container footer">
-      <div class="row">
-        <p class="col">
-          This page was Coded by Jessica Dubrey. Insert link to Github
-        </p>
-      </div>
+    <div>
+      <p class="footer-text">
+        This page was <a href="" class="git-link">coded</a> by Jessica Dubrey.
+      </p>
     </div>
-
-    <div class="git-link"><p>This page was coded by Jessica Dubrey.</p></div>
   </body>
 </html>
