Changed song layout, corrected photo size, added third artist photo and song, changed background color for hero section, removed extra photos

--- a/index.html
+++ b/index.html
@@ -39,11 +39,9 @@
             Check out some of this Summer's biggest hits and best songs from
             Barbie. 🎵
           </p>
-          <a href="#music" class="btn artist-link">Tune In</a>
+          <a href="#music" class="btn song-link">Tune In</a>
         </div>
-        <div
-          class="transparent d-flex justify-content-center align-items-center"
-        >
+        <div class="d-flex justify-content-center align-items-center">
           <img
             src="src/Soundtrack.jpg"
             alt="Actress Margot Robbie, as Barbie, waving"
@@ -52,67 +50,94 @@
         </div>
       </div>
     </div>
+
     <div class="container">
-      <div class="row">
-        <div class="col album-stats">
-          <h3>17 Songs</h3>
+      <div class="row justify-content-evenly align-items-center">
+        <div class="col-4 playlist" id="music">
+          <img src="src/Lizzo.jpg" alt="Singer Lizzo" class="artist-photo" />
+
+          <div class="song">
+            <iframe
+              style="border-radius: 12px"
+              src="https://open.spotify.com/embed/track/2YXGbxICUdOUJe9OPlicy1?utm_source=generator"
+              width="100%"
+              height="152"
+              frameborder="0"
+              allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"
+            ></iframe>
+          </div>
         </div>
-        <div class="col album-stats">
-          <h3>
-            Listen to the full album
-            <a
-              href="https://open.spotify.com/album/0BaIaHcyBXuOWeM4Aas4EW?si=ZkFPAEKaReagftQeAsns4w"
-              >here</a
-            >
-          </h3>
+
+        <div class="col-4 playlist">
+          <img
+            src="src/Dua-Lipa.jpg"
+            alt="Dua Lipa at the London premiere of Barbie."
+            class="artist-photo"
+          />
+
+          <div class="song">
+            <iframe
+              style="border-radius: 12px"
+              src="https://open.spotify.com/embed/track/11C4y2Yz1XbHmaQwO06s9f?utm_source=generator"
+              width="100%"
+              height="152"
+              frameborder="0"
+              allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"
+            ></iframe>
+          </div>
         </div>
-        <div class="col album-stats">
-          <h3>21 Artists</h3>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row playlist" id="music">
-        <div class="col song">
-          <iframe
-            style="border-radius: 12px"
-            src="https://open.spotify.com/embed/track/11C4y2Yz1XbHmaQwO06s9f?utm_source=generator"
-            width="100%"
-            height="152"
-            frameborder="0"
-            allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-            loading="lazy"
-          ></iframe>
-        </div>
-        <div class="col">
-          <img src="src/Dua-Lipa.jpg" alt="" class="artist-photo" />
+
+        <div class="col-4 playlist">
+          <img
+            src="src/Fifty Fifty.jpeg"
+            alt="K-Pop group Fifty Fifty."
+            class="artist-photo"
+          />
+
+          <div class="song">
+            <iframe
+              style="border-radius: 12px"
+              src="https://open.spotify.com/embed/track/7F3q1XtxXjKFoTyo14fGQn?utm_source=generator"
+              width="100%"
+              height="152"
+              frameborder="0"
+              allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"
+            ></iframe>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="container">
-      <div class="row playlist">
-        <div class="col song">
-          <iframe
-            style="border-radius: 12px"
-            src="https://open.spotify.com/embed/track/2YXGbxICUdOUJe9OPlicy1?utm_source=generator"
-            width="100%"
-            height="152"
-            frameborder="0"
-            allowfullscreen=""
-            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-            loading="lazy"
-          ></iframe>
-        </div>
-        <div class="col">
-          <img src="src/Lizzo.jpg" alt="" class="artist-photo" />
+      <div class="row">
+        <div class="col album-stats">
+          <h3>
+            Listen to the full album
+            <a
+              href="https://open.spotify.com/album/0BaIaHcyBXuOWeM4Aas4EW?si=ZkFPAEKaReagftQeAsns4w"
+              class="album-link"
+              >here!</a
+            >
+          </h3>
         </div>
       </div>
     </div>
+
     <div>
       <p class="footer-text">
-        This page was <a href="" class="git-link">coded</a> by Jessica Dubrey.
+        This page was
+        <a
+          href="https://github.com/jdubrey/Barbie-Landing-Page-"
+          class="git-link"
+          >coded</a
+        >
+        by Jessica Dubrey.
       </p>
     </div>
   </body>
