Added img-fluid to photos

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <div class="d-flex justify-content-center align-items-center">
           <img
             src="src/Soundtrack.jpg"
-            alt="Actress Margot Robbie, as Barbie, waving"
-            class="transparent-image"
+            alt="Actress Margot Robbie, as Barbie, with Soundtrack announcment"
+            class="transparent-image img-fluid"
           />
         </div>
       </div>
@@ -54,7 +54,11 @@
     <div class="container">
       <div class="row justify-content-evenly align-items-center">
         <div class="col-4 playlist" id="music">
-          <img src="src/Lizzo.jpg" alt="Singer Lizzo" class="artist-photo" />
+          <img
+            src="src/Lizzo.jpg"
+            alt="Singer Lizzo"
+            class="artist-photo img-fluid"
+          />
 
           <div class="song">
             <iframe
@@ -74,7 +78,7 @@
           <img
             src="src/Dua-Lipa.jpg"
             alt="Dua Lipa at the London premiere of Barbie."
-            class="artist-photo"
+            class="artist-photo img-fluid"
           />
 
           <div class="song">
@@ -95,7 +99,7 @@
           <img
             src="src/Fifty Fifty.jpeg"
             alt="K-Pop group Fifty Fifty."
-            class="artist-photo"
+            class="artist-photo img-fluid"
           />
 
           <div class="song">
