Update media query: padding, delete more pictures

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <img
             src="src/Soundtrack.jpg"
             alt="Actress Margot Robbie, as Barbie, with Soundtrack announcment"
-            class="transparent-image img-fluid"
+            class="transparent-image img-fluid d-none d-md-block"
           />
         </div>
       </div>
