--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <div class="navigation">
       <img
-        src="src/Barbie-The-Movie-Logo.png"
+        src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/096/995/original/Barbie-The-Movie-Logo.png?1694644344"
         alt="Pink Barbie Movie Logo"
         class="logo-img"
       />
@@ -43,7 +43,7 @@
         </div>
         <div class="d-flex justify-content-center align-items-center">
           <img
-            src="src/Soundtrack.jpg"
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/096/994/original/Soundtrack.jpg?1694644177"
             alt="Actress Margot Robbie, as Barbie, with Soundtrack announcment"
             class="transparent-image img-fluid d-none d-md-block"
           />
@@ -55,7 +55,7 @@
       <div class="row justify-content-evenly align-items-center">
         <div class="col-4 playlist" id="music">
           <img
-            src="src/Lizzo.jpg"
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/096/998/original/Lizzo.jpg?1694644412"
             alt="Singer Lizzo"
             class="artist-photo img-fluid"
           />
@@ -76,7 +76,7 @@
 
         <div class="col-4 playlist">
           <img
-            src="src/Dua-Lipa.jpg"
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/096/996/original/Dua-Lipa.jpg?1694644396"
             alt="Dua Lipa at the London premiere of Barbie."
             class="artist-photo img-fluid"
           />
@@ -97,7 +97,7 @@
 
         <div class="col-4 playlist">
           <img
-            src="src/Fifty Fifty.jpeg"
+            src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/096/997/original/Fifty_Fifty.jpeg?1694644405"
             alt="K-Pop group Fifty Fifty."
             class="artist-photo img-fluid"
           />
