--- a/index.html
+++ b/index.html
@@ -20,8 +20,156 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&family=Satisfy&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+
+    <style>
+      body {
+        background: #feecf9;
+      }
+      .navigation {
+        background-color: rgb(242, 0, 161);
+        padding: 0 20px;
+      }
+      .logo-img {
+        padding: 10px 12px;
+        width: 150px;
+      }
+      .hero {
+        background: #bde0fe;
+        padding: 60px 70px 70px;
+        margin-left: 0;
+        margin-right: 0;
+        max-width: 100%;
+      }
+      h1 {
+        font-family: "Satisfy", cursive;
+        font-size: 54px;
+        color: #175676;
+      }
+      p {
+        font-family: "Roboto", sans-serif;
+        font-size: 24px;
+        color: #175676;
+        line-height: 1.5;
+        font-weight: bold;
+      }
+      .album-stats h3 {
+        font-family: "Satisfy", cursive;
+      }
+      .content-info {
+        width: 300px;
+        height: 300px;
+      }
+      .transparent-image {
+        max-width: 400px;
+        max-height: 400px;
+        border-radius: 12px;
+        border: 5px solid rgb(254, 189, 229);
+      }
+      .song-link {
+        background-color: rgb(242, 0, 161);
+        color: #ffffff;
+        border-radius: 4px;
+        padding: 15px 40px;
+      }
+      .song-link:hover {
+        background-color: rgb(254, 189, 229);
+        transition: ease-in-out;
+        color: rgb(242, 0, 161);
+        border-radius: 4px;
+        padding: 15px 40px;
+        border-color: rgb(242, 0, 161);
+      }
+      .album-stats {
+        margin: 60px 10px 100px;
+        background-color: rgb(254, 189, 229);
+        width: 100px;
+        height: 80px;
+        padding: 30px 30px;
+        border-radius: 20px;
+        color: #fc6ace;
+      }
+      .album-stats:hover {
+        color: #fc6ace;
+      }
+      .album-link {
+        text-decoration: none;
+        color: #fc6ace;
+      }
+      .album-link:hover {
+        color: rgb(242, 0, 161);
+      }
+      .album-stats p {
+        font-family: "Roboto", sans-serif;
+        font-size: 18px;
+        text-align: center;
+      }
+      h3 {
+        font-family: "Roboto", sans-serif;
+        font-size: 24px;
+        text-align: center;
+      }
+      .playlist {
+        margin: 50px 0px 50px;
+      }
+      .song {
+        padding: 25px 0 0 0;
+      }
+      .artist-photo {
+        height: 200px;
+        width: 200px;
+        margin: 0px 50px;
+        border-radius: 12px;
+        border: 4px solid #ea2078;
+        object-fit: cover;
+      }
+      .footer {
+        margin: 80px 0;
+        background-color: #4ba3c3;
+        border-radius: 12px;
+        padding: 30px 120px;
+        max-width: 100%;
+      }
+      .footer-text {
+        text-align: center;
+        font-size: 16px;
+        font-weight: normal;
+      }
+      .git-link {
+        text-decoration: none;
+        color: rgb(254, 189, 229);
+      }
+      .git-link:hover {
+        color: rgb(242, 0, 161);
+      }
+      @media (max-width: 992px) {
+        .navigation {
+          text-align: center;
+        }
+        h1 {
+          line-height: 1;
+        }
+        .hero {
+          padding: 40px 70px 80px;
+        }
+        p {
+          font-size: 22px;
+        }
+        .artist-photo {
+          display: none;
+        }
+        .col-4 {
+          width: 100%;
+        }
+        .song {
+          width: 70%;
+          margin: auto;
+        }
+        .playlist {
+          margin: 15px;
+        }
+      }
+    </style>
+    <title>Barbie</title>
   </head>
   <body>
     <div class="navigation">
